# iter-mvp

./: .env.example  .gitignore  CLAUDE.md  README.md
.cargo/: config.toml
.claude/agents/: feature-planner.md  flutter-implementor.md  geo-specialist.md  photo-pipeline.md  reviewer.md  rust-implementor.md  schema-architect.md  state-updater.md  test-engineer.md
.github/workflows/: ci.yml
app/: README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/android/app/src/main/: AndroidManifest.xml
app/android/app/src/main/kotlin/app/iter/iter/: MainActivity.kt
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/screens/: globe_screen.dart  home_screen.dart  login_screen.dart
app/test/: widget_test.dart
infra/supabase/migrations/: 0001_init.sql  0002_users_rls.sql
ralph/: BLOCKERS.md  DECISIONS.md  FEATURE_BACKLOG.md  PROMPT.md  STATE.md  product-context-ko.md
scripts/: codegen.sh  dev.sh
server/: Cargo.toml  README.md  sqlx.toml
server/src/: auth.rs  lib.rs  main.rs  users.rs
server/tests/: auth.rs  health.rs  openapi_emission_test.rs
srs/: 00-overview.md  01-functional.md  02-data-model.md  03-api.md  04-nfr.md  05-ui-design.md  06-geo-logic.md  07-risks.md  08-out-of-scope.md
