[package]
name = "iter-server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
utoipa = { version = "4", features = ["axum_extras"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "macros"] }
supabase-jwt = "0.1"
anyhow = "1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", default-features = false, features = ["serde"] }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

# --- Build profiles ---
# P2: thinner debug info → faster link, smaller target/
# P3: dependencies built with opt-level=1 → faster test runtime, deps cached anyway
[profile.dev]
debug = 1
incremental = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

# P5: release profile for production deploys
[profile.release]
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"
